correct spelling and re-align the navigation bar

--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ li{
 /* NAVBAR MENU */
 .main_menu{
     display: flex;
+    margin-top: 30px;
     gap: 3em;
 }
 
@@ -133,6 +134,7 @@ li{
 }
 
 .sources {
+    margin-top: 30px;
     margin-right: 7%;
     margin-left: 1%;
 }
